fix: hangle pagination if only 1 page and fix ai chat layoutshift

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -234,6 +234,9 @@
   * {
     @apply border-border outline-ring/50;
   }
+  html {
+    scrollbar-gutter: stable;
+  }
   body {
     @apply bg-background text-foreground selection:bg-primary selection:text-primary-foreground scroll-smooth font-sans tracking-tight antialiased;
   }
